# trading_app

./: README.md  main.py  pyproject.toml
