[tool.poetry]
name = "trading-app"
version = "0.1.0"
description = ""
authors = ["gReen7aRRow <f.gusarov@inbox.ru>"]
readme = "README.md"
packages = [{include = "trading_app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.95.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
